fixed spacing issue w filter and sort

--- a/style.css
+++ b/style.css
@@ -485,12 +485,11 @@ a:before {
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 3 items in a row */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* 3 items in a row */
     grid-gap: 30px;
-    row-gap: 50px;
-    grid-auto-rows: minmax(100px, auto); /* min height, and allow for growth */
+    row-gap: 50px;  
     max-width: 1200px;
-    margin: -100px auto 0;
+    margin: 0 auto;
     
 }
 
@@ -513,9 +512,9 @@ a:before {
 
 
 .product-item img {
-    border-radius: 10px;
-    width: auto;
+    width: 100%;
     height: auto;
+    border-radius: 10px;
     margin-bottom: 10px; /* space between image and text below */
 }
 
